--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
+    "nodemon": "^1.11.0",
     "request": "^2.79.0",
     "serve-favicon": "^2.3.2"
   }
